<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        app:hintTextColor="@android:color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_clear"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        android:labelFor="@id/emailAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/e_mail_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:imeOptions="actionDone"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textCursorDrawable="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        app:hintTextColor="@android:color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/show_password_selector"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        android:labelFor="@id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:focusableInTouchMode="true"
            android:textCursorDrawable="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_gravity="bottom"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        style="@style/Widget.MaterialComponents.Button"
        android:background="@color/red"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginHorizontal="48dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>




</LinearLayout>