<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        tools:text="Bio Apfel Jonagold Regional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        tools:src="@drawable/ic_pokemon"
        android:layout_width="300dp"
        android:layout_height="300dp"/>

    <View
        android:id="@+id/facilityRefBackground"
        android:background="@color/grey_2"
        app:layout_constraintTop_toTopOf="@id/facilityLabel"
        app:layout_constraintBottom_toBottomOf="@id/facilityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:alpha="0.3"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/facilityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:textSize="11sp"
        android:text="@string/facility_ref_id"/>

    <TextView
        android:id="@+id/facilityRefValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3QiYpzc3Jcvve"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="@id/facilityLabel"
        app:layout_constraintBottom_toBottomOf="@id/facilityLabel"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/idLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/facilityLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:textSize="11sp"
        android:text="@string/unique_identifier_label"/>

    <TextView
        android:id="@+id/idValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3QiYpzc3Jcvve"
        android:textStyle="bold"
        android:textSize="11sp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/facilityRefValue"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/versionBackground"
        android:background="@color/grey_2"
        app:layout_constraintTop_toTopOf="@id/versionLabel"
        app:layout_constraintBottom_toBottomOf="@id/versionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:alpha="0.3"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:textSize="11sp"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/versionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3QiYpzc3Jcvve"
        android:textStyle="bold"
        android:textSize="11sp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/versionLabel"
        app:layout_constraintBottom_toBottomOf="@id/versionLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pickJobLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/versionLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/grey"
        android:textStyle="italic"
        android:textSize="11sp"
        android:text="@string/pickjob_ref_id"/>

    <TextView
        android:id="@+id/pickJobValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3QiYpzc3Jcvve"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/versionValue"
        app:layout_constraintBottom_toTopOf="@id/articleIdValue"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/articleIdBackground"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="8dp"
        android:alpha="0.3"
        android:background="@color/grey_2"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@id/articleIdLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/articleIdLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/articleIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:text="@string/article_id"
        android:textColor="@color/grey"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/statusLabel"
        app:layout_constraintTop_toBottomOf="@id/pickJobLabel" />

    <TextView
        android:id="@+id/articleIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3QiYpzc3Jcvve"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="@id/articleIdLabel"
        app:layout_constraintBottom_toBottomOf="@id/articleIdLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:text="@string/status"
        android:textColor="@color/grey"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/statusChangeButton"
        app:layout_constraintTop_toBottomOf="@id/articleIdLabel" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="OPEN"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/grey"
        android:layout_marginEnd="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="@id/statusLabel"
        app:layout_constraintBottom_toBottomOf="@id/statusLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/statusChangeButton"
        app:layout_constraintTop_toBottomOf="@id/statusLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_ripple"
        android:layout_width="wrap_content"
        android:textColor="@color/red"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:text="@string/change_status"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
    
    <View
        app:layout_constraintTop_toBottomOf="@id/statusChangeButton"
        android:background="@color/grey_2"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="1dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>